--- a/Revels'18/NIB Files/InstagramCell.xib
+++ b/Revels'18/NIB Files/InstagramCell.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina5_5" orientation="portrait">
+    <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -14,11 +14,11 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="InstagramCell" customModule="Revels_18" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="dOD-wX-rve">
-                    <rect key="frame" x="10" y="25" width="245" height="40"/>
+                    <rect key="frame" x="10" y="25" width="295" height="40"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xRV-CL-H4s">
                             <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
@@ -28,10 +28,10 @@
                             </constraints>
                         </imageView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="1NQ-ai-n9V">
-                            <rect key="frame" x="45" y="0.0" width="200" height="40"/>
+                            <rect key="frame" x="45" y="0.0" width="250" height="40"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c7Q-K1-0Ue">
-                                    <rect key="frame" x="0.0" y="0.0" width="200" height="20"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="250" height="20"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="20" id="0tI-e1-Ts7"/>
                                     </constraints>
@@ -40,37 +40,37 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hLb-Eq-RTt">
-                                    <rect key="frame" x="0.0" y="20" width="200" height="20"/>
+                                    <rect key="frame" x="0.0" y="20" width="250" height="20"/>
                                     <fontDescription key="fontDescription" type="system" weight="thin" pointSize="12"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
                             <constraints>
-                                <constraint firstAttribute="width" constant="200" id="88l-mu-Sj0"/>
+                                <constraint firstAttribute="width" constant="250" id="88l-mu-Sj0"/>
                             </constraints>
                         </stackView>
                     </subviews>
                 </stackView>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ggG-LE-ZVq">
-                    <rect key="frame" x="0.0" y="70" width="414" height="414"/>
+                    <rect key="frame" x="0.0" y="70" width="375" height="375"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="ggG-LE-ZVq" secondAttribute="height" multiplier="1:1" id="99F-Si-hJh"/>
                     </constraints>
                 </imageView>
                 <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="dXN-fX-vOG">
-                    <rect key="frame" x="5" y="489" width="200" height="20"/>
+                    <rect key="frame" x="5" y="450" width="200" height="25"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fNe-3h-e1k">
-                            <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
+                            <rect key="frame" x="0.0" y="0.0" width="25" height="25"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="20" id="BUP-LG-9nN"/>
-                                <constraint firstAttribute="height" constant="20" id="Lbz-f4-khs"/>
+                                <constraint firstAttribute="width" constant="25" id="BUP-LG-9nN"/>
+                                <constraint firstAttribute="height" constant="25" id="Lbz-f4-khs"/>
                             </constraints>
                             <state key="normal" title="Button" image="BlurFavorites"/>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tuy-pp-mdP">
-                            <rect key="frame" x="25" y="0.0" width="175" height="20"/>
+                            <rect key="frame" x="30" y="0.0" width="170" height="25"/>
                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -81,7 +81,7 @@
                     </constraints>
                 </stackView>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalCompressionResistancePriority="1000" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" text="Hello World!" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZAe-aS-MEo">
-                    <rect key="frame" x="5" y="514" width="404" height="80"/>
+                    <rect key="frame" x="5" y="480" width="365" height="80"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="80" id="lss-GR-hNc"/>
@@ -89,8 +89,17 @@
                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                 </textView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N12-sq-kvh">
+                    <rect key="frame" x="270" y="39" width="100" height="13.5"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="100" id="S1i-OF-9G6"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
-            <color key="backgroundColor" red="0.99519230769230771" green="0.99038461538461542" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="ggG-LE-ZVq" secondAttribute="trailing" id="0ce-kR-GGl"/>
                 <constraint firstItem="ggG-LE-ZVq" firstAttribute="top" secondItem="dOD-wX-rve" secondAttribute="bottom" constant="5" id="4at-hQ-wdW"/>
@@ -99,6 +108,8 @@
                 <constraint firstItem="dOD-wX-rve" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="10" id="QCS-TD-lDW"/>
                 <constraint firstItem="ZAe-aS-MEo" firstAttribute="top" secondItem="dXN-fX-vOG" secondAttribute="bottom" constant="5" id="Vgw-Kh-Fc0"/>
                 <constraint firstItem="dXN-fX-vOG" firstAttribute="top" secondItem="ggG-LE-ZVq" secondAttribute="bottom" constant="5" id="mrr-Ao-iml"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="N12-sq-kvh" secondAttribute="trailing" constant="5" id="oTc-Cx-geK"/>
+                <constraint firstItem="ggG-LE-ZVq" firstAttribute="top" secondItem="N12-sq-kvh" secondAttribute="bottom" constant="17.5" id="qXm-he-u3h"/>
                 <constraint firstItem="dXN-fX-vOG" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="5" id="rkF-QX-uPt"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="ZAe-aS-MEo" secondAttribute="trailing" constant="5" id="smm-3Z-jCd"/>
                 <constraint firstItem="ggG-LE-ZVq" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="vVH-KU-t2N"/>
@@ -111,6 +122,7 @@
                 <outlet property="locationLabel" destination="hLb-Eq-RTt" id="Gbz-oL-Gmu"/>
                 <outlet property="nameLabel" destination="c7Q-K1-0Ue" id="Gk0-wX-F07"/>
                 <outlet property="profileView" destination="xRV-CL-H4s" id="XFe-VL-C9T"/>
+                <outlet property="time" destination="N12-sq-kvh" id="kp5-tL-Ymw"/>
             </connections>
             <point key="canvasLocation" x="32" y="47"/>
         </view>
