--- a/Revels'18/NIB Files/InstagramCell.xib
+++ b/Revels'18/NIB Files/InstagramCell.xib
@@ -27,11 +27,11 @@
                                 <constraint firstAttribute="width" constant="40" id="cfr-Jw-v8z"/>
                             </constraints>
                         </imageView>
-                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="1NQ-ai-n9V">
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="1NQ-ai-n9V">
                             <rect key="frame" x="45" y="0.0" width="250" height="40"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c7Q-K1-0Ue">
-                                    <rect key="frame" x="0.0" y="0.0" width="250" height="20"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="34.5" height="20"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="20" id="0tI-e1-Ts7"/>
                                     </constraints>
@@ -40,7 +40,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hLb-Eq-RTt">
-                                    <rect key="frame" x="0.0" y="20" width="250" height="20"/>
+                                    <rect key="frame" x="0.0" y="20" width="30.5" height="20"/>
                                     <fontDescription key="fontDescription" type="system" weight="thin" pointSize="12"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
@@ -53,13 +53,13 @@
                     </subviews>
                 </stackView>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ggG-LE-ZVq">
-                    <rect key="frame" x="0.0" y="70" width="375" height="375"/>
+                    <rect key="frame" x="0.0" y="75" width="375" height="375"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="ggG-LE-ZVq" secondAttribute="height" multiplier="1:1" id="99F-Si-hJh"/>
                     </constraints>
                 </imageView>
                 <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="dXN-fX-vOG">
-                    <rect key="frame" x="5" y="450" width="200" height="25"/>
+                    <rect key="frame" x="5" y="455" width="200" height="25"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fNe-3h-e1k">
                             <rect key="frame" x="0.0" y="0.0" width="25" height="25"/>
@@ -81,7 +81,7 @@
                     </constraints>
                 </stackView>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalCompressionResistancePriority="1000" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" text="Hello World!" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZAe-aS-MEo">
-                    <rect key="frame" x="5" y="480" width="365" height="80"/>
+                    <rect key="frame" x="5" y="485" width="365" height="80"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="80" id="lss-GR-hNc"/>
@@ -90,7 +90,7 @@
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                 </textView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N12-sq-kvh">
-                    <rect key="frame" x="270" y="39" width="100" height="13.5"/>
+                    <rect key="frame" x="270" y="44" width="100" height="13.5"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="100" id="S1i-OF-9G6"/>
                     </constraints>
@@ -102,7 +102,7 @@
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="ggG-LE-ZVq" secondAttribute="trailing" id="0ce-kR-GGl"/>
-                <constraint firstItem="ggG-LE-ZVq" firstAttribute="top" secondItem="dOD-wX-rve" secondAttribute="bottom" constant="5" id="4at-hQ-wdW"/>
+                <constraint firstItem="ggG-LE-ZVq" firstAttribute="top" secondItem="dOD-wX-rve" secondAttribute="bottom" constant="10" id="4at-hQ-wdW"/>
                 <constraint firstItem="ZAe-aS-MEo" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="5" id="LOX-QA-OQW"/>
                 <constraint firstItem="dOD-wX-rve" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="5" id="Pgo-w1-9ZQ"/>
                 <constraint firstItem="dOD-wX-rve" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="10" id="QCS-TD-lDW"/>
