--- a/Revels'18/NIB Files/EmptyView.xib
+++ b/Revels'18/NIB Files/EmptyView.xib
@@ -16,13 +16,20 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Revels Logo" translatesAutoresizingMaskIntoConstraints="NO" id="rVO-ZP-Qrj">
-                    <rect key="frame" x="112" y="258" width="150" height="150"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Revels18_Logo" translatesAutoresizingMaskIntoConstraints="NO" id="rVO-ZP-Qrj">
+                    <rect key="frame" x="87" y="233" width="200" height="200"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="150" id="DCS-rS-q6Z"/>
-                        <constraint firstAttribute="width" constant="150" id="kkk-Y1-RZO"/>
+                        <constraint firstAttribute="height" constant="200" id="DCS-rS-q6Z"/>
+                        <constraint firstAttribute="width" constant="200" id="kkk-Y1-RZO"/>
                     </constraints>
                 </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Cannot Connect To The Network" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="okw-qz-fhq">
+                    <rect key="frame" x="16" y="441" width="343" height="100"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="25"/>
+                    <color key="textColor" red="0.71708369260000004" green="0.30249661210000001" blue="0.20386126639999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
@@ -30,9 +37,10 @@
                 <constraint firstItem="rVO-ZP-Qrj" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="swm-2g-Rsf"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <point key="canvasLocation" x="33.5" y="54.5"/>
         </view>
     </objects>
     <resources>
-        <image name="Revels Logo" width="512" height="512"/>
+        <image name="Revels18_Logo" width="915" height="915"/>
     </resources>
 </document>
