--- a/Revels'18/NIB Files/EmptyView.xib
+++ b/Revels'18/NIB Files/EmptyView.xib
@@ -16,25 +16,37 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Revels18_Logo" translatesAutoresizingMaskIntoConstraints="NO" id="rVO-ZP-Qrj">
-                    <rect key="frame" x="87" y="233" width="200" height="200"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Revels18_Logo" translatesAutoresizingMaskIntoConstraints="NO" id="rVO-ZP-Qrj">
+                    <rect key="frame" x="0.0" y="195" width="375" height="200"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="200" id="DCS-rS-q6Z"/>
-                        <constraint firstAttribute="width" constant="200" id="kkk-Y1-RZO"/>
+                        <constraint firstAttribute="height" constant="200" id="0cN-lX-Uph"/>
+                        <constraint firstAttribute="width" constant="375" id="mho-Q9-NIB"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Cannot Connect To The Network" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="okw-qz-fhq">
-                    <rect key="frame" x="16" y="441" width="343" height="100"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="25"/>
-                    <color key="textColor" red="0.71708369260000004" green="0.30249661210000001" blue="0.20386126639999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cannot Connect To The Network..." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="okw-qz-fhq">
+                    <rect key="frame" x="0.0" y="405" width="375" height="20.5"/>
+                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                    <color key="textColor" red="0.69357281920000002" green="0.26721471549999998" blue="0.19994783399999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pull To Refresh To Try Again" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hBE-mn-KwA">
+                    <rect key="frame" x="0.0" y="435.5" width="375" height="18"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="rVO-ZP-Qrj" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="cuj-iv-VWf"/>
-                <constraint firstItem="rVO-ZP-Qrj" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="swm-2g-Rsf"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="okw-qz-fhq" secondAttribute="trailing" id="2r0-aN-Lbc"/>
+                <constraint firstItem="okw-qz-fhq" firstAttribute="top" secondItem="rVO-ZP-Qrj" secondAttribute="bottom" constant="10" id="5O4-Kl-H6K"/>
+                <constraint firstItem="hBE-mn-KwA" firstAttribute="top" secondItem="okw-qz-fhq" secondAttribute="bottom" constant="10" id="6fS-v8-QPc"/>
+                <constraint firstItem="rVO-ZP-Qrj" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="175" id="JZU-9X-P73"/>
+                <constraint firstItem="okw-qz-fhq" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="PaY-g5-ITT"/>
+                <constraint firstItem="hBE-mn-KwA" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="SrH-Rn-nOo"/>
+                <constraint firstItem="rVO-ZP-Qrj" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="Xyf-Ww-O45"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="rVO-ZP-Qrj" secondAttribute="trailing" id="iPK-74-H6d"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="hBE-mn-KwA" secondAttribute="trailing" id="wnv-OO-x2I"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <point key="canvasLocation" x="33.5" y="54.5"/>
